Removed parent container paddings (project uses child paddings). Ornamental divider for keynotes section now aligned correctly.

--- a/style.css
+++ b/style.css
@@ -176,9 +176,6 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  padding: 64px 0;
-
   background-color: var(--purple-100);
 
   text-align: center;
@@ -186,12 +183,9 @@ main {
 
 .keynotes-section {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
-
-  background-color: red;
-
-  padding: 64px 20px;
 
   gap: 20;
 }
